# mandelbrot_hi_res

./: .gitignore  CMakeLists.txt  README.md
shaders/: shader.frag  shader.vert
src/: main.cpp
